# Daily_news

./: .env.example  .gitignore  README.md  README_CN.md  README_EN.md  SPEC.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_news_tables.py  0002_v1_1_enhancements.py  0003_article_search_vector.py
config/: categories.yaml  default.yaml  jobs.yaml  keywords.yaml  scoring.yaml  settings.yaml  sources.yaml
configs/: official_sources.yaml  seed_sources.yaml
docs/: README_CN.md  agent_handoff.md  article-search-phase2-spec.md  change_log_2026-06-01_mvp_rss_pipeline.md  hermes_agent_workflow.md  hermes_cron.md  kanban-coordination-followups.md
docs/plans/: 2026-06-04-jobs-package-refactor.md
legacy/old_governance/configs/: approved_feeds.backup.yaml  approved_feeds.yaml  candidate_publishers.yaml  rejected_feeds.yaml
legacy/old_governance/src/: article_extractor.py  discovery.py  feed_scorer.py
legacy/old_governance/tests/: test_article_extractor.py  test_scoring.py
scripts/: agent_bootstrap.py  agent_classify_articles.py  agent_dedup.py  agent_fetch_fulltext.py  agent_fetch_latest.py  agent_generate_mcp_config.py  agent_import_source_packs.py  agent_run_daily.py  agent_status.py  collect_rss_quick.py  cron_build_daily_events.sh  cron_collect.sh  cron_common.sh  cron_watch_breaking.sh  domain_summarizer.py
src/news_feed_bootstrap/: __init__.py  agent_io.py  classifier.py  cli.py  config.py  dedup.py  feed_fetcher.py  feed_validator.py  fulltext_fetcher.py  mcp_adapter.py  mcp_config_generator.py  mcp_fetcher.py  models.py  opml_importer.py  pipeline.py  source_adapters.py  source_classification.py  source_pack_importer.py  utils.py
src/news_system/: cli.py  schemas.py  serializers.py
tests/: test_api_events.py  test_article_search_backend_dispatch.py  test_article_search_cli.py  test_article_search_explainability_contract.py  test_article_search_postgres_integration.py  test_article_search_query_parser.py  test_article_search_vector_migration.py  test_breaking_alert_state.py  test_breaking_detector.py  test_collect_job.py  test_data_layer_mvp.py  test_dedup.py  test_deduplicator.py  test_domain_summarizer.py  test_event_clusterer.py  test_event_fingerprint.py  test_event_status.py  test_feed_validator.py  test_fetcher.py  test_fulltext_fetcher.py  test_fulltext_quality.py  test_jobs_public_api.py  test_mcp_fetcher.py  test_models.py  test_newsapi_gdelt_collectors.py  test_normalizer.py  test_opml_importer.py  test_pipeline.py  test_postgres_fts_query_compiler.py  test_postgres_integration.py  test_representative_articles.py  test_scorer.py  test_scrapling_collector_dates.py  test_source_classification.py  test_source_credibility.py  test_source_pack_importer.py  test_sources_config.py  test_step4_daily_events.py  test_step5_breaking_events.py
(+47 files in other folders)
