[project]
name = "Daily_news"
version = "0.1.0"
description = "News data layer MVP"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.26",
  "feedparser>=6.0",
  "rapidfuzz>=3.6",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "psycopg[binary]>=3.1",
  "python-dateutil>=2.8",
  "trafilatura>=2.0.0",
  "scrapling>=0.4.8",
  "curl-cffi>=0.15.0",
  "playwright>=1.60.0",
  "patchright>=1.60.0",
  "msgspec>=0.21.1",
  "browserforge>=1.2.4",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
daily-news = "news_system.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_system"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that require external services such as PostgreSQL",
]
